# raoul

./: Cargo.toml  README.md  example.ra  examples  grammar.pest  song_data_clean.csv
.github/workflows/: test-and-build.yml
editor/: raoul.vim
examples/: assignment.ra  complete.ra
examples/invalid/: assign-to-void.ra  redefine-variable-type.ra  return-void-function.ra  syntax-error.ra  undeclared-variable.ra
examples/valid/: aritmetic.ra  array.ra  assignment.ra  functions.ra  while.ra
non-test-examples/: fact.ra  fibo.ra  histogram.ra  matrix.ra  merge-sort.ra  plot.ra  quick-sort.ra  read.ra  search.ra
propuesta/content/: 01-vision.md  02-objective.md  03.1-basic-elements.md
src/: grammar.pest  main.rs  tests.rs
src/address/: mod.rs  tests.rs
src/args/: mod.rs
src/ast/: ast_kind.rs  mod.rs
src/dir_func/: function.rs  mod.rs  variable.rs  variable_value.rs
src/enums/: mod.rs
src/error/: error_kind.rs  mod.rs
src/parser/: grammar.pest  mod.rs  tests.rs
src/quadruple/: mod.rs  quadruple.rs  quadruple_manager.rs
src/snapshots/: raoul__tests__get_ast@aritmetic.ra.snap  raoul__tests__get_ast@array-cte.ra.snap  raoul__tests__get_ast@array-list-index.ra.snap  raoul__tests__get_ast@array-list-missing-index.ra.snap  raoul__tests__get_ast@array-list-negative.ra.snap  raoul__tests__get_ast@array-mat-index.ra.snap  raoul__tests__get_ast@array-simple.ra.snap  raoul__tests__get_ast@array.ra.snap  raoul__tests__get_ast@assign-to-void.ra.snap  raoul__tests__get_ast@assignment-every-type.ra.snap  raoul__tests__get_ast@assignment.ra.snap  (+211 more)
src/vm/: gui.rs  (+1 more)
(+72 files in other folders)
