[package]
name = "raoul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest_consume = "1.1.1"
pest = "2.1.3"
pest_derive = "2.1.0"
clap = "3.1.8"
[dev-dependencies]
insta = { version="1.13.0", features = ["glob"] }
